--- a/src/CRW/PlatformBundle/Resources/views/About/index.html.twig
+++ b/src/CRW/PlatformBundle/Resources/views/About/index.html.twig
@@ -30,5 +30,387 @@
             </div><!--/.navbar-collapse -->
     </nav><!-- / .navbar -->
   {% endblock %}
+    <!-- ========== About - Section ========== -->
 
+    <section id="about" class="container">
+      <div class="row section">
+        
+        <header class="sec-heading">
+          <img src="{{ asset('img/logo-large-dark.png') }}" alt="Definity">
+          <h2 class="hidden">About Studio</h2>
+          <span class="subheading hidden">Lorem ipsum dolor sit amet, consectetur</span>
+        </header>
+
+        <div class="col-md-4">
+          <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          <footer><cite>by Henry Hill</cite></footer></blockquote>
+        </div>
+        <div class="col-md-4">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="col-md-4">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+      </div><!-- / .row -->
+    </section><!-- / .container -->
+
+
+
+    <!-- ========== Cricle Counters ========== -->
+
+    <div id="skillsCircles" class="circles-counters">
+      <div class="container">
+        <div id="counters" class="row count-wrapper">
+          
+          <!-- Item 1 -->
+          <div class="col-sm-6 col-lg-3 circle-item">
+            <div class="chart" data-percent="75"><span class="circle-icon linea-basic-gear"></span></div>
+            <span class="circle-text">Web Development</span>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="col-sm-6 col-lg-3 circle-item">
+            <div class="chart" data-percent="75"><span class="circle-icon linea-basic-display"></span></div>
+            <span class="circle-text">Web Design</span>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="col-sm-6 col-lg-3 circle-item">
+            <div class="chart" data-percent="75"><span class="circle-icon linea-basic-photo"></span></div>
+            <span class="circle-text">Photography</span>
+          </div>
+
+          <!-- Item 4 -->
+          <div class="col-sm-6 col-lg-3 circle-item">
+            <div class="chart" data-percent="75"><span class="circle-icon linea-basic-star"></span></div>
+            <span class="circle-text">Marketing</span>
+          </div>
+
+        </div><!-- / .row -->
+      </div><!-- / .container -->
+    </div><!-- / .circle-counters -->
+
+
+
+    <!-- ========== Team ========== -->
+
+    <div class="gray-bg">
+      <section class="container section team-4col">
+        <div class="row">
+          
+          <header class="sec-heading">
+            <h2>Meet the team</h2>
+            <span class="subheading">We are creative professionals</span>
+          </header>
+
+      <!-- Member 1 -->
+          <div class="col-lg-3 col-md-6 mb-sm-50">
+            <div class="t-item">
+
+              <!-- Image -->
+              <div class="t-image">
+                <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+                <div class="t-description">
+                  <div class="content-wrapper">
+                    <h4 class="h-alt">Hello!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Info -->
+              <div class="t-info">
+                <h4 class="t-name">Benedict BIANCHINI</h4>
+                <span class="t-role">Chef de projet</span>
+                <ul class="social-links">
+                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                </ul>
+              </div>
+
+            </div><!-- / .t-item -->
+          </div><!-- / .col-lg-3 -->
+
+
+          <!-- Member 2 -->
+          <div class="col-lg-3 col-md-6 mb-sm-50">
+            <div class="t-item">
+
+              <!-- Image -->
+              <div class="t-image">
+                <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+                <div class="t-description">
+                  <div class="content-wrapper">
+                    <h4 class="h-alt">Qui suis-je ?</h4>
+                    <p>J'ai rejoins cette entreprise avec l'aspiration de pouvoir développer un projet de grande envergure. De ce point de vue, E-mobilier correspond parfaitement à mes critères.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Info -->
+              <div class="t-info">
+                <h4 class="t-name">Mehdi CHOUANIA</h4>
+                <span class="t-role">Web Developpeur</span>
+                <ul class="social-links">
+                  <li><a href="https://www.linkedin.com/in/mehdi-chouania-24840ba6/"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="http://chouania-mehdi.fr/"><i class="fa fa-dribbble"></i></a></li>
+                </ul>
+              </div>
+
+            </div><!-- / .t-item -->
+          </div><!-- / .col-lg-3 -->
+
+
+          <!-- Member 3 -->
+          <div class="col-lg-3 col-md-6 mb-sm-50">
+            <div class="t-item">
+
+              <!-- Image -->
+              <div class="t-image">
+                <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+                <div class="t-description">
+                  <div class="content-wrapper">
+                    <h4 class="h-alt">Hello!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Info -->
+              <div class="t-info">
+                <h4 class="t-name">Florian LIEVRE</h4>
+                <span class="t-role">Web Developpeur</span>
+                <ul class="social-links">
+                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                </ul>
+              </div>
+
+            </div><!-- / .t-item -->
+          </div><!-- / .col-lg-3 -->
+
+
+          <!-- Member 4 -->
+          <div class="col-lg-3 col-md-6 mb-sm-50">
+            <div class="t-item">
+
+              <!-- Image -->
+              <div class="t-image">
+                <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+                <div class="t-description">
+                  <div class="content-wrapper">
+                    <h4 class="h-alt">Hello!</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Info -->
+              <div class="t-info">
+                <h4 class="t-name">Sifa SIR</h4>
+                <span class="t-role">Web Designer</span>
+                <ul class="social-links">
+                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                </ul>
+              </div>
+
+            </div><!-- / .t-item -->
+          </div><!-- / .col-lg-3 -->
+        </div><!-- / .row -->
+      </section><!-- / .contianer -->
+    </div><!-- / .gray-bg -->
+
+
+
+    <!-- ========== Number Counters ========== -->
+
+    <div class="number-counters">
+      <div class="container">
+        <div id="counters" class="row count-wrapper">
+          
+          <!-- Item 1 -->
+          <div class="col-md-3 mb-sm-100 count-item">
+            <span id="count-1" class="count-nbr">467</span>
+            <span class="count-text">Projects completed</span>
+          </div>
+
+          <!-- Item 2 -->
+          <div class="col-md-3 mb-sm-100 count-item">
+            <span id="count-2" class="count-nbr">2835</span>
+            <span class="count-text">Emails Send</span>
+          </div>
+
+          <!-- Item 3 -->
+          <div class="col-md-3 mb-sm-100 count-item">
+            <span id="count-3" class="count-nbr">46,930</span>
+            <span class="count-text">Pixels created</span>
+          </div>
+
+          <!-- Item 4 -->
+          <div class="col-md-3 count-item">
+            <span id="count-4" class="count-nbr">102,890</span>
+            <span class="count-text">Happy clients</span>
+          </div>
+
+        </div><!-- / .row -->
+      </div><!-- / .container -->
+    </div><!-- / .number-counters -->
+
+
+
+    <!-- ========== Features ========== -->
+
+    <div class="gray-bg">
+      <section class="container section ft-boxed-hover">
+        <div class="row">
+
+          <header class="sec-heading">
+            <h2>Why chose us</h2>
+            <span class="subheading">We provide high quality services</span>
+          </header>
+
+          <div class="col-md-12 no-gap">
+            
+            <ul>
+              <!-- Item 1 -->
+              <li>
+                <span class="linea-basic-headset ft-icon"></span>
+                <h5>Support</h5>
+                <h6 class="h-alt">Lorem Ipsum Dolor</h6>
+
+                <div class="hover-content">
+                  <span class="linea-basic-headset ft-icon"></span>
+                  <span class="ft-heading">Support</span>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                  </p>
+                  <a href="#">Learn more</a>
+                </div><!-- / .hover-content -->
+              </li>
+
+              <!-- Item 2 -->
+              <li>
+                <span class="linea-basic-gear ft-icon"></span>
+                <h5>Adjustments</h5>
+                <h6 class="h-alt">Lorem Ipsum Dolor</h6>
+
+                <div class="hover-content">
+                  <span class="linea-basic-gear ft-icon"></span>
+                  <span class="ft-heading">Adjustments</span>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                  </p>
+                  <a href="#" class="link-btn">Learn More</a>
+                </div><!-- / .hover-content -->
+              </li>
+
+              <!-- Item 3 -->
+              <li>
+                <span class="linea-basic-joypad ft-icon"></span>
+                <h5>Gaming</h5>
+                <h6 class="h-alt">Lorem Ipsum Dolor</h6>
+
+                <div class="hover-content">
+                  <span class="linea-basic-joypad ft-icon"></span>
+                  <span class="ft-heading">Gaming</span>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                  </p>
+                  <a href="#" class="link-btn">Learn More</a>
+                </div><!-- / .hover-content -->
+              </li>
+
+              <!-- Item 4 -->
+              <li>
+                <span class="linea-basic-message-multiple ft-icon"></span>
+                <h5>Chat</h5>
+                <h6 class="h-alt">Lorem Ipsum Dolor</h6>
+
+                <div class="hover-content">
+                  <span class="linea-basic-message-multiple ft-icon"></span>
+                  <span class="ft-heading">Chat</span>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                  </p>
+                  <a href="#" class="link-btn">Learn More</a>
+                </div><!-- / .hover-content -->
+              </li>
+
+              <!-- Item 5 -->
+              <li>
+                <span class="linea-basic-keyboard ft-icon"></span>
+                <h5>Code</h5>
+                <h6 class="h-alt">Lorem Ipsum Dolor</h6>
+
+                <div class="hover-content">
+                  <span class="linea-basic-keyboard ft-icon"></span>
+                  <span class="ft-heading">Code</span>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                  </p>
+                  <a href="#" class="link-btn">Learn More</a>
+                </div><!-- / .hover-content -->
+              </li>
+
+              <!-- Item 6 -->
+              <li>
+                <span class="linea-basic-cup ft-icon"></span>
+                <h5>Awards</h5>
+                <h6 class="h-alt">Lorem Ipsum Dolor</h6>
+
+                <div class="hover-content">
+                  <span class="linea-basic-cup ft-icon"></span>
+                  <span class="ft-heading">Awards</span>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                  </p>
+                  <a href="#" class="link-btn">Learn More</a>
+                </div><!-- / .hover-content -->
+              </li>
+
+              <!-- Item 7 -->
+              <li>
+                <span class="linea-basic-world ft-icon"></span>
+                <h5>Global</h5>
+                <h6 class="h-alt">Lorem Ipsum Dolor</h6>
+
+                <div class="hover-content">
+                  <span class="linea-basic-world ft-icon"></span>
+                  <span class="ft-heading">Global</span>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                  </p>
+                  <a href="#" class="link-btn">Learn More</a>
+                </div><!-- / .hover-content -->
+              </li>
+
+              <!-- Item 8 -->
+              <li>
+                <span class="linea-basic-server2 ft-icon"></span>
+                <h5>Cake</h5>
+                <h6 class="h-alt">Lorem Ipsum Dolor</h6>
+
+                <div class="hover-content">
+                  <span class="linea-basic-server2 ft-icon"></span>
+                  <span class="ft-heading">Cake</span>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                  </p>
+                  <a href="#" class="link-btn">Learn More</a>
+                </div><!-- / .hover-content -->
+              </li>
+            </ul>
+
+          </div>
+
+        </div><!-- / .row -->
+      </section><!-- / .cotnainer -->
+    </div><!-- / .gray-bg -->
 {% endblock %}
